Oppdatert logging #deploy-tenor-search-service
Enhanced the getTestdata method in TenorSearchController to accept an additional parameter for capturing request headers. Added code to log details of these headers. Also, replaced the previous method of retrieving user authentication information. This will provide better insight into the incoming requests and their source.